<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="#008bff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#191919"
            android:text="@string/empty"
            android:textSize="20dp"
            android:fontFamily="@font/monserrat"/>

        <TextView
            android:id="@+id/txtTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/monserrat"
            android:text="@string/empty"
            android:textColor="#191919"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStoreName" />

        <TextView
            android:id="@+id/txtTypeStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/monserrat"
            android:text="@string/empty"
            android:textColor="#191919"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelephone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/monserrat"
            android:text="@string/location"
            android:textColor="#008bff"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTypeStore" />

        <Button
            android:id="@+id/btnSetCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/btnrounded2"
            android:fontFamily="@font/monserrat"
            android:text="@string/setcurrentlocation"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

        <EditText
            android:id="@+id/txtLat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/border_text_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/monserrat"
            android:hint="@string/lat"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtLon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/border_text_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/monserrat"
            android:hint="@string/lon"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnSetLocation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSetCurrentLocation"
            android:background="@drawable/btnrounded"
            android:text="@string/setlocation"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:fontFamily="@font/monserrat"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="350dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="center"/>


    </LinearLayout>




</ScrollView>